This this the changelog file for the Pothos Blocks toolkit.

Release 0.2.0 (pending)
==========================

New packet blocks:

- Added label deframer block

New digital blocks:

- Added scrambler block
- Added descrambler block
- Added symbol mapper block
- Added bits to symbols block
- Added bytes to symbols block
- Added symbols to bits block
- Added symbol slicer block
- Added preamble correlator block
- Added differential encoder block
- Added differential decoder block

New utility blocks:

- Created vector source block for testing
- Created infinite source block for benchmarks

File

- Added data type specification to file source

Misc

- Pacer block produces rxRate label on change
- Added synchronous alignment option to snooper
- Added unit test for JSON Topology feature

Release 0.1.0 (2014-12-21)
==========================

This is the first public release of the Pothos Blocks toolkit.